2007-05-21  Donald E. Curtis <dcurtis3@sourceforge.net>

	* libavogadro/src/primitive.h: Fixed compiler warnings.
	* libavogadro/src/glwidget.cpp: Fixed compiler warnings.
	* libavogadro/src/color.cpp: Added virtual deconstructor and reformatted.
	* libavogadro/src/engines/bsdyengine.cpp: Fixed compiler warnings.
	* avogadro/src/enginelistview.cpp: Cleaned commented code and fixed bug
	caused by previous approach.

2007-05-18 01:41  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* avogadro/src/extentions/ghemicalextention.h,
	avogadro/src/extentions/ghemicalextention.cpp: Added "Setup
	Force Field " dialog, "Calculate Energy" and "Rotor Search".

	* avogadro/src/extentions/forcefielddialog.h,
	avogadro/src/extentions/forcefielddialog.cpp,
	avogadro/src/extentions/forcefielddialog.ui: force field setup
	dialog. (I had to call uic-qt4 manually, something wrong with 
	the makefile?)

2007-05-15 06:35  Donald Ephraim Curtis <dcurtis3@sourceforge.net>

	* avogadro.nsi, avogadro/src/CMakeLists.txt,
	  avogadro/src/extension.h, avogadro/src/icons/avogadro.ico,
	  avogadro/src/mainwindow.cpp, avogadro/src/windows,
	  avogadro/src/windows/avogadro.rc,
	  libavogadro/src/engines/bsdyengine.cpp,
	  libavogadro/src/engines/debugengine.cpp,
	  libavogadro/src/engines/debugengine.h,
	  libavogadro/src/engines/labelengine.cpp,
	  libavogadro/src/engines/sphereengine.cpp,
	  libavogadro/src/engines/stickengine.cpp,
	  libavogadro/src/primitive.cpp, libavogadro/src/tool.cpp,
	  libavogadro/src/tools/clickmeasuretool.cpp,
	  libavogadro/src/tools/manipulatetool.cpp,
	  libavogadro/src/undosequence.h: fixed files based on Win32
	  compiler strictness
	  added window resource file (windows/avogadro.rc)
	  updated package building script
	  further icon updates
	  fixed an error resolving issue 1719085

	* libavogadro/src/tools/drawcommand.*
	  libavogadro/src/tools/drawtool.cpp:
	  Fix for issue 1719080: undo causing errors to multiple views.
