@@ -61,7 +61,7 @@ bool SphereEngine::render(GLWidget *gl)
 
   glDisable( GL_NORMALIZE );
   glEnable( GL_RESCALE_NORMAL );
-  list = queue().primitiveList(Primitive::AtomType);
+  list = primitiveList().subList(Primitive::AtomType);
   foreach( Primitive *p, list ) {
     render(static_cast<const Atom *>(p));
   }
