@@ -276,52 +276,6 @@ namespace Avogadro {
     d->invalidGeomInfo = false;
   }
 
-  class PrimitiveQueuePrivate {
-    public:
-      PrimitiveQueuePrivate() {};
-
-      QVector< QList<Primitive *> > queue;
-  };
-
-  PrimitiveQueue::PrimitiveQueue() : d(new PrimitiveQueuePrivate) { 
-    d->queue.resize(Primitive::LastType);
-//     for( int type=0; type<Primitive::LastType; type++ ) { 
-//       d->queue.append(QList<Primitive *>); 
-//     } 
-  }
-
-  PrimitiveQueue::~PrimitiveQueue() { 
-//     for( int i = 0; i<d->queue.size(); i++ ) { 
-//       delete d->queue[i];
-//     } 
-    delete d;
-  }
-
-  const QList<Primitive *>& PrimitiveQueue::primitiveList(enum Primitive::Type type) const { 
-    return(d->queue[type]); 
-  }
-
-  void PrimitiveQueue::addPrimitive(Primitive *p) { 
-    d->queue[p->type()].append(p); 
-  }
-
-  void PrimitiveQueue::removePrimitive(Primitive *p) {
-    d->queue[p->type()].removeAll(p);
-  }
-
-  int PrimitiveQueue::size() const {
-    int sum = 0;
-    for( int i=0; i<d->queue.size(); i++ ) {
-      sum += d->queue[i].size();
-    }
-    return sum;
-  }
-
-  void PrimitiveQueue::clear() {
-    for( int i=0; i<d->queue.size(); i++ ) {
-      d->queue[i].clear();
-    }
-  }
 }
 
 #include "primitive.moc"
